# tic-tac-toe

./: .gitignore  GUIDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
skills/tic-tac-toe-cli/: PLAN.md  VERIFY.md
skills/tic-tac-toe-tests/: PLAN.md  VERIFY.md
tests/: test_bot.py  test_cli.py  test_game_flow.py  test_moves.py  test_rules.py
tic_tac_toe/: __init__.py  board.py  bot.py  cli.py  game.py  rules.py
